--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,23 +4,22 @@ disqus:
   disqus_shortname: 'millennial-3'
 
 # If you are not using Google Analytics, please change 'google-ID' to an empty string
-google-ID: 'UA-112060364-2'
+google-ID: 'G-2BG8KTZQ3G'
 
 menu:
 - {name: 'Inicio', folder: 'pages', file: 'home.html'}
 - {name: 'Recursos', folder: 'pages', file: 'resources.html'}
 - {name: 'Talleres', folder: 'pages', file: 'workshops.html'}
-- {name: 'Documentation', folder: 'pages', file: 'documentation.html'}
-- {name: 'About', folder: 'pages', file: 'about.html'}
-- {name: 'Contact', folder: 'pages', file: 'contact.html'}
+- {name: 'Voces', folder: 'pages', file: 'voces.html'}
+- {name: 'Contacto', folder: 'pages', file: 'contact.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'twitter', link: 'https://twitter.com/paululele'}
-- {icon: 'facebook', link: 'https://www.facebook.com/Le.Paul.94'}
-- {icon: 'instagram', link: 'https://instagram.com/paululele'}
-- {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
-- {icon: 'rss-square', link: 'feed.xml'}
+#- {icon: 'twitter', link: 'https://twitter.com/paululele'}
+#- {icon: 'facebook', link: 'https://www.facebook.com/Le.Paul.94'}
+#- {icon: 'instagram', link: 'https://instagram.com/paululele'}
+- {icon: 'envelope', link: 'mailto:econ.mentoringp@gmail.com'}
+#- {icon: 'rss-square', link: 'feed.xml'}
 # - {icon: 'rss-square', link: 'rss-feed.xml'}
 
 # Customize site text
