--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -24,8 +24,8 @@ social:
 
 # Customize site text
 pagination:
-  next_page: 'Newer'
-  previous_page: 'Older'
+  next_page: 'Adelante'
+  previous_page: 'Atrás'
 
 sharing_button_prompt: 'Comparte con el mundo!'
 
