--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ sass:
   style: :nested
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           "EMLA"
+title:		           "EconThaki"
 description:	       "Una comunidad diversa que promueve el acceso equitativo a la academia"
-author:              "Econ Mentoring Group"
+author:              "EconThaki"
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
