--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,6 +8,7 @@ google-ID: 'G-2BG8KTZQ3G'
 
 menu:
 - {name: 'Inicio', folder: 'pages', file: 'inicio.html'}
+- {name: '¿Por qué?', folder: 'pages', file: 'problem.html'}
 - {name: 'Recursos', folder: 'pages', file: 'resources.html'}
 - {name: 'Talleres', folder: 'pages', file: 'talleres.html'}
 - {name: 'Voces', folder: 'pages', file: 'voces.html'}
