changing new pages
changing new pages

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ authors:
     gravatar: 
 
     email: econ.mentoringp@gmail.com
-    web: https://econmentoringla.github.io
+    web: https://econthaki.github.io
     twitter: 
     description: "EconThaki por una academia diversa"
 
