--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ authors:
     display_name: EconThaki
     email: econ.mentoringp@gmail.com
     web: https://econthaki.github.io
-    twitter: 
+    twitter: https://twitter.com/EconThaki
     description: "EconThaki por una academia diversa"
   selene:
     name: Selene
