--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ authors:
     display_name: Gabriela
     email:  gaby.lecaro@gmail.com
     twitter: https://twitter.com/GabLecaro
-    description: "Investigadora Asociada en IPA"
+    description: "Gabriela es Investigadora Asociada en IPA"
   marcy: 
     name: Marcy
     display_name: Marcy
