--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ plugins:
 social:
   instagram: 
   github: https://github.com/EconThaki
-  twitter: https://twitter.com/bstartercomhttps://twitter.com/EconThaki
+  twitter: https://twitter.com/EconThaki
 # Archives
 jekyll-archives:
   enabled:
