--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ baseurl: '/'
 twitter: https://twitter.com/EconThaki
 github: https://github.com/EconThaki
 email: 'econ.mentoringp@gmail.com'
-google_analytics: 'G-2BG8KTZQ3G'
+google_analytics: 'UA-142539773-1'
 
 disqus: 'demowebsite'
 sharethis: '<script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5a6b2fe4fb197a0011c589f6&product=sticky-share-buttons"></script>'
